# LabCGIHC

./: README.md
template/: CMakeLists.txt
template/include/: Mesh.h  Shader.h  Window.h
template/src/: Mesh.cpp  Shader.cpp  Window.cpp  mainbase.cpp  segundo_main.cpp
